--- a/app/views/interview_questionnaires/edit.html.erb
+++ b/app/views/interview_questionnaires/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing interview_questionnaire</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3 top-card-padding">
+    <div class="card">
+      <div align="center">
+        <h1>Add your info</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @interview_questionnaire %> |
-<%= link_to 'Back', interview_questionnaires_path %>
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</div>
