--- a/app/views/text_messages/_form.html.erb
+++ b/app/views/text_messages/_form.html.erb
@@ -10,17 +10,13 @@
           </ul>
         </div>
     <% end %>
-
-    <div class="field">
-      <%= f.text_field :to_number, value: params[:to_number], :placeholder => 'Enter Phone Number' %>
-    </div>
     <div class="field">
       <%= f.label :user_group %><br>
       <%= f.collection_select :user_group, User::USERSTATUSES, :to_s, :to_s, :class => "col-md-3" %>
     </div>
     <div class="field">
       <%= f.label :message %><br>
-      <%= f.text_field :message, value: params[:message], :placeholder => 'Enter Message' %>
+      <%= f.text_area :message, value: params[:message], :placeholder => 'Enter Message' %>
     </div>
     <div class="field">
       <%= f.label :contact_info %><br>
