--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,15 @@
 
 <%= form_for(@user, url: users_admin_index_path(@user) ) do |f| %>
+    <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+          <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
     <div class="registration_space">
       <%= f.text_field :first_name, autofocus: true, :placeholder => 'First Name', :class => 'col-md-3' %>
       <%= f.text_field :last_name,:placeholder => 'Last Name',:class => 'col-md-3' %>
