--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -12,7 +12,7 @@
           <hr>
         </div>
 
-        <% if current_user.confirmed_brother? %>
+        <% if current_user && current_user.confirmed_brother? %>
             <div class="col-md-5 col-md-offset-1">
               <p>
                 <strong>Required event:</strong>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="col-md-12">
-          <% if current_user.multiple_have_permissions?(['president','first_vp','second_vp','treasurer','sergeant','chaplain','admin']) %>
+          <% if current_user && current_user.multiple_have_permissions?(['president','first_vp','second_vp','treasurer','sergeant','chaplain','admin']) %>
               <%= link_to 'Edit', edit_event_path(@event) %> |
           <% end %>
           <%= link_to 'Back', events_path %>
