--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -53,6 +53,8 @@
               <%= f.submit %>
             </div>
         <% end %>
+
+        <%= link_to 'Back', events_path %>
       </div>
     </div>
   </div>
