--- a/app/views/rush_interviews/index.html.erb
+++ b/app/views/rush_interviews/index.html.erb
@@ -1,27 +1,127 @@
-<h1>Listing rush_interviews</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @rush_interviews.each do |rush_interview| %>
-      <tr>
-        <td><%= rush_interview.user %></td>
-        <td><%= link_to 'Show', rush_interview %></td>
-        <td><%= link_to 'Edit', edit_rush_interview_path(rush_interview) %></td>
-        <td><%= link_to 'Destroy', rush_interview, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Rush interview', new_rush_interview_path %>
+<div class="row">
+  <div class="col-lg-10 col-lg-offset-1">
+    <div class="card">
+      <% @rush_interviews.each do |interview|  %>
+          <% next unless (interview.user && interview.user.interview_questionnaires.any? && interview.bid) %>
+          <div>
+            <div style='text-align: center;'>
+              <h2>
+                <%= (interview.user && interview.user.name) ? interview.user.name : 'No Name Available' %>
+                <%= (interview.user.interview_questionnaires.last.nickname) ? "(#{interview.user.interview_questionnaires.last.nickname})" : '' %>
+              </h2>
+            </div>
+            <div class="col-md-4">
+              <div class="img_div">
+                <%= image_tag (interview.user && interview.user.profile_picture?) ? interview.user.profile_picture_url : 'no-image.png', :class => "contact_img" %>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <% if interview.user && interview.user.interview_questionnaires %>
+                  <div>
+                    <p style="margin: 0;">GPA:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.grade_point_average %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Major:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.major %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Events Attended Total:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.rush_events_attended.split(',').length %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Brothers Known Total:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.brothers_you_know.split(',').length %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Reason for rushing:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.reason_for_rushing %></h3>
+                  </div>
+              <% end %>
+            </div>
+            <div class="col-md-4">
+              <% if interview.user && interview.user.interview_questionnaires %>
+                  <div>
+                    <p style="margin: 0";>Home Town:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.hometown %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Where they live:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.room_number %> <%= interview.user.interview_questionnaires.last.current_address %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Involvement</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.outside_activities %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Hobbies:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.hobbies %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Events Attended:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.rush_events_attended %></h3>
+                  </div>
+                  <div>
+                    <p style="margin: 0;">Brothers Known:</p>
+                  </div>
+                  <div>
+                    <h3 style="margin: 0; padding-left: 15px;"><%= interview.user.interview_questionnaires.last.brothers_you_know %></h3>
+                  </div>
+              <% end %>
+            </div>
+          </div>
+          <div class="clear"></div>
+          <div class="col-md-6">
+            <% if current_user.multiple_have_permissions?(['admin','president','recruitment']) %>
+                <%= form_for(interview.user) do |f| %>
+                    <div class="field">
+                      <%= f.file_field :profile_picture %>
+                    </div>
+                    <div class="field">
+                      <%= f.label :remote_profile_picture_url, "or image URL" %><br />
+                      <%= f.text_field :remote_profile_picture_url %>
+                    </div>
+                    <%= f.submit "Update Picture" %>
+                <% end %>
+            <% end %>
+          </div>
+          <div class="col-md-6">
+            <% if current_user.multiple_have_permissions?(['admin','president','recruitment']) %>
+                <%= form_for(interview.bid) do |f| %>
+                    <div class="field">
+                      <%= f.label :bid_given %><br>
+                      <%= f.collection_select :bid_given, RushInterview::BIDOPTIONS, :to_s, :to_s, :class => "col-md-3" %>
+                    </div>
+                    <div class="actions">
+                      <%= f.submit 'Update' %>
+                    </div>
+                <% end %>
+            <% end %>
+          </div>
+          <div class="clear"></div>
+          <hr>
+      <% end %>
+    </div>
+  </div>
+</div>
+<div class="clear"></div>
