--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+div class="row">
   <div class="col-md-6 col-md-offset-3 top-card-padding">
     <div class="card">
       <h1 class="card_header">Your Info</h1>
