interview times loox better

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -822,6 +822,9 @@ only screen and (max-width: 760px),
   .events-table td:nth-of-type(5):before { content: "Thursday"; }
   .events-table td:nth-of-type(6):before { content: "Friday"; }
   .events-table td:nth-of-type(7):before { content: "Saturday"; }
+
+  .interview-time-table td:nth-of-type(1):before { content: "Interview time"; }
+  .interview-time-table td:nth-of-type(2):before { content: "Who is signed up"; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
