--- a/app/views/interview_times/index.html.erb
+++ b/app/views/interview_times/index.html.erb
@@ -1,54 +1,58 @@
-<h1>Interview Times</h1>
+<div class="container-fluid">
+  <div class="row">
+    <h1>Interview Times</h1>
 
-<div class="col-md-1"></div>
-<% @interview_times_by_date.each do |date, interviews| %>
-    <div class="col-md-3" style="display: inline-block">
-      <div class="card">
-        <h3><%= date.strftime('%A, %B %d') %></h3>
-        <table>
-          <tr>
-            <th>Interview time</th>
-            <th>Who is signed up</th>
-          </tr>
-          <% interviews.each do |interview| %>
+    <div class="col-md-12"></div>
+    <% @interview_times_by_date.each do |date, interviews| %>
+        <div class="col-md-4 col-lg-4" style="margin: 0">
+          <div class="card">
+            <h3><%= date.strftime('%A, %B %d') %></h3>
+            <table class="interview-time-table">
               <tr>
-                <td><%= interview.interview_time.strftime('%l:%M %p') %></td>
-                <% if interview.rush_interview && interview.rush_interview.user %>
-                    <td>
-                      <%= interview.rush_interview.user.first_name %> <%= interview.rush_interview.user.last_name %> :
-                      <% if interview.rush_interview.user.id == current_user.id %>
-                          <%= form_for(interview, :html => { style: 'display: inline-block' }) do |f| %>
-                              <%= f.submit 'Drop Time Slot' %>
-                          <% end %>
-                      <% end %>
-                    </td>
-                <% else %>
-                    <% if current_user.rush_interviews.any? && current_user.rush_interviews.last.interview_time %>
+                <th>Interview time</th>
+                <th>Who is signed up</th>
+              </tr>
+              <% interviews.each do |interview| %>
+                  <tr>
+                    <td><%= interview.interview_time.strftime('%l:%M %p') %></td>
+                    <% if interview.rush_interview && interview.rush_interview.user %>
                         <td>
-                          Deselect Current Time to Switch
+                          <%= interview.rush_interview.user.first_name %> <%= interview.rush_interview.user.last_name %> :
+                          <% if interview.rush_interview.user.id == current_user.id %>
+                              <%= form_for(interview, :html => { style: 'display: inline-block' }) do |f| %>
+                                  <%= f.submit 'Drop Time Slot' %>
+                              <% end %>
+                          <% end %>
                         </td>
                     <% else %>
-                        <td>
-                          <%= form_for(interview) do |f| %>
-                              <%= f.submit 'Select Time Slot' %>
-                          <% end %>
-                        </td>
+                        <% if current_user.rush_interviews.any? && current_user.rush_interviews.last.interview_time %>
+                            <td>
+                              Deselect Current Time to Switch
+                            </td>
+                        <% else %>
+                            <td>
+                              <%= form_for(interview) do |f| %>
+                                  <%= f.submit 'Select Time Slot' %>
+                              <% end %>
+                            </td>
+                        <% end %>
                     <% end %>
-                <% end %>
-              </tr>
-          <% end %>
-        </table>
-      </div>
-      <div class="clear"></div>
-    </div>
-<% end %>
+                  </tr>
+              <% end %>
+            </table>
+          </div>
+          <div class="clear"></div>
+        </div>
+    <% end %>
 
-<br>
-<div class="clear"></div>
-<br>
-<% if current_user.multiple_have_permissions?(['president','first_vp','second_vp','treasurer','sergeant','chaplain','admin']) %>
-    <div class="col-md-1"></div>
-    <div class="col-md-3" style="display: inline-block">
-      <%= link_to 'New Interview time', new_interview_time_path, data: { no_turbolink: true } %>
-    </div>
-<% end %>
+    <br>
+    <div class="clear"></div>
+    <br>
+    <% if current_user.multiple_have_permissions?(['president','first_vp','second_vp','treasurer','sergeant','chaplain','admin']) %>
+        <div class="col-md-1"></div>
+        <div class="col-md-3" style="display: inline-block">
+          <%= link_to 'New Interview time', new_interview_time_path, data: { no_turbolink: true } %>
+        </div>
+    <% end %>
+  </div>
+</div>
