--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,6 +35,7 @@
                 <li><%= link_to "About", about_path %></li>
                 <li><%= link_to "FAQ", faq_path %></li>
                 <li><%= link_to "Contact", contact_us_path %></li>
+                <li><%= link_to "Interviews", interview_times_path %></li>
             <% else %>
                 <li><%= link_to "Resources", '/resources' %></li>
                 <li><%= link_to "News-Letters", alumni_news_letters_path %></li>
